[package]
name = "redis"
version = "0.2.1"
authors = ["Arjav Jain <arjavjain0703@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4.3"
log = "0.4.27"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
