[package]
name = "redis"
description = "An implementation of the redis server in rust"
license = "MIT"
repository = "https://github.com/arjav0703/redis"
version = "0.2.2"
authors = ["Arjav Jain <arjavjain0703@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
chrono = "0.4.42"
clap = { version = "4.5.38", features = ["derive"] }
enum-display = "0.2.1"
hex = "0.4.3"
log = "0.4.27"
rand = "0.9.2"
sha2 = "0.10.9"
tokio = { version = "1.23.0", features = ["full"] } # async networking
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
